apps/homerun2/components/core-catcher/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homerun2-core-catcher
  namespace: ${HOMERUN2_NAMESPACE:-homerun2}
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE:-default}
  hostnames:
    - ${HOMERUN2_CORE_CATCHER_HOSTNAME:-core-catcher}.${DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homerun2-core-catcher
          port: 80
